--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -2,3 +2,5 @@ CONFIG_ZMK_KEYBOARD_NAME="Japonska Corne"
 CONFIG_ZMK_BLE=y
 CONFIG_BT_MAX_PAIRED=1
 CONFIG_BT_MAX_CONN=1
+# Uncomment the following line to enable the Corne OLED Display
+CONFIG_ZMK_DISPLAY=y
